--- a/Assets/Scripts/Extensions/Extensions.asmdef
+++ b/Assets/Scripts/Extensions/Extensions.asmdef
@@ -3,7 +3,8 @@
     "rootNamespace": "Extensions",
     "references": [
         "GUID:75469ad4d38634e559750d17036d5f7c",
-        "GUID:938a01d9553594744b39eff3ece1bba8"
+        "GUID:938a01d9553594744b39eff3ece1bba8",
+        "GUID:6071c9f2ce0a4407c93af459fa416e54"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
